# csvmd

./: CONTRIBUTING.es.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: copilot-instructions.md  funding.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  mcp-executed-workflow.yml
benches/: comparison.rs  performance.rs  standard_mode.rs  streaming_mode.rs
docs/: benchmarks.md
examples/: memory_usage.rs
src/: error.rs  lib.rs  main.rs
tests/: edge_cases.rs  integration_tests.rs  performance_tests.rs
tests/snapshots/: edge_cases__csv_with_inconsistent_columns_extreme.snap  edge_cases__csv_with_only_commas.snap  edge_cases__csv_with_trailing_commas.snap  integration_tests__cli_combined_flags.snap  integration_tests__cli_directory_instead_of_file.snap  integration_tests__cli_help_flag.snap  integration_tests__cli_nonexistent_file.snap  integration_tests__cli_stdin_empty_input.snap  integration_tests__cli_stdin_single_line.snap  integration_tests__cli_with_complex_csv.snap  integration_tests__cli_with_custom_delimiter.snap  integration_tests__cli_with_empty_file.snap  integration_tests__cli_with_file_input.snap  integration_tests__cli_with_invalid_alignment.snap  integration_tests__cli_with_invalid_utf8_streaming_mode.snap  integration_tests__cli_with_mixed_quote_styles.snap  integration_tests__cli_with_no_headers_flag.snap  integration_tests__cli_with_single_column.snap  integration_tests__cli_with_stdin.snap  integration_tests__cli_with_streaming_flag.snap  integration_tests__cli_with_unicode.snap
