[package]
name = "csvmd"
version = "0.3.0"
edition = "2021"
description = "Convert from CSV to a Markdown table"
authors = ["Tim Rogers <me@timrogers.co.uk>"]
license = "MIT"
repository = "https://github.com/timrogers/csvmd"
homepage = "https://github.com/timrogers/csvmd"
keywords = ["cli", "csv", "markdown", "md", "convert"]
categories = ["command-line-utilities"]

[dependencies]
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.21"
insta = "1.40"
